--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+#root,html,body{
+    margin:0;
+    padding:0;
+    height:100vh;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app{
+    height:100%;
+    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url('./images/city2.jpg');
+    background-size: cover;
+    background-position:center;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card{
+    background-color: whitesmoke;
+    width:40%;
+    height:50%;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction:column;
+    border-radius: 25px;
+    padding:2%;
+    box-shadow:10px 10px;
+
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.heading{
+    display:flex;
+    align-items:center;
+    height:580px;
+    font-family:'Roboto Mono', monospace;
 }
 
-.App-link {
-  color: #61dafb;
+.button{
+    position:relative;
+    outline:none;
+    text-decoration:none;
+    border-radius:50px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    cursor:pointer;
+    text-transform:uppercase;
+    height:200px;
+    width:210px;
+    opacity:1;
+    background-color: #ffffff;
+    border: 1px solid rgba(22,76,167,0.6);
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media only screnn and (max-width :600px){
+    .card{
+        width:80%;
+        height:30%;
+    }
 }
